{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 62,
  "lineage": "91302287-8560-06a0-9215-251357ea368a",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-08-10T03:54:02.954-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devsecopsupanzi/global/firewalls/vpc-ansible-allow-internal",
            "log_config": [],
            "name": "vpc-ansible-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/networks/vpc-ansible",
            "priority": 1000,
            "project": "devsecopsupanzi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/firewalls/vpc-ansible-allow-internal",
            "source_ranges": [
              "10.128.0.0/9"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "vm-internal"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-08-10T00:59:25.950-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/devsecopsupanzi/global/firewalls/vpc-ansible-allow-ssh",
            "log_config": [],
            "name": "vpc-ansible-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/networks/vpc-ansible",
            "priority": 1000,
            "project": "devsecopsupanzi",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/firewalls/vpc-ansible-allow-ssh",
            "source_ranges": [
              "34.123.164.154/32",
              "34.136.254.74/32",
              "34.173.123.123/32",
              "41.186.112.90/32",
              "41.216.98.178/32"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250805",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 60,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/zones/us-central1-a/disks/vm-formgt"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devsecopsupanzi/zones/us-central1-a/instances/vm-formgt",
            "instance_id": "700982199552583123",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "FALSE",
              "ssh-keys": "olusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtLYbCUU42 olusec@oadewusi\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBd2OWHwV3jMCVQxtG/4n8nIq1YMpmrr5rW9ygAP1U1P\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtLYbCUU42 olusec@oadewusi\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBd2OWHwV3jMCVQxtG/4n8nIq1YMpmrr5rW9ygAP1U1P\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtL [...]
            },
            "metadata_fingerprint": "QPHBJ_mSsDk=",
            "metadata_startup_script": "    #!/usr/bin/env bash\n    set -e  # Remove -u to avoid issues with unset variables\n    \n    # Enable logging for debugging\n    exec \u003e \u003e(logger -t startup-script) 2\u003e\u00261\n    echo \"Starting cluster setup script...\"\n\n    USERS=\"olusecc olusecc olusecc\"\n    echo \"Users to configure: $USERS\"\n\n    # Wait for cloud-init to finish creating users\n    echo \"Waiting for cloud-init to complete...\"\n    while [ ! -f /var/lib/cloud [...]
            "name": "vm-formgt",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.136.254.74",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/networks/vpc-ansible",
                "network_ip": "10.128.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/regions/us-central1/subnetworks/vpc-ansible",
                "subnetwork_project": "devsecopsupanzi"
              }
            ],
            "project": "devsecopsupanzi",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/zones/us-central1-a/instances/vm-formgt",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "vm-internal"
            ],
            "tags_fingerprint": "Cx2bKzEMszY=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "tls_private_key.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250805",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 80,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/zones/us-central1-a/disks/vm-fortools"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devsecopsupanzi/zones/us-central1-a/instances/vm-fortools",
            "instance_id": "2025170112112501766",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "FALSE",
              "ssh-keys": "olusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtLYbCUU42 olusec@oadewusi\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBd2OWHwV3jMCVQxtG/4n8nIq1YMpmrr5rW9ygAP1U1P\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtLYbCUU42 olusec@oadewusi\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBd2OWHwV3jMCVQxtG/4n8nIq1YMpmrr5rW9ygAP1U1P\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtL [...]
            },
            "metadata_fingerprint": "QPHBJ_mSsDk=",
            "metadata_startup_script": "    #!/usr/bin/env bash\n    set -e  # Remove -u to avoid issues with unset variables\n    \n    # Enable logging for debugging\n    exec \u003e \u003e(logger -t startup-script) 2\u003e\u00261\n    echo \"Starting cluster setup script...\"\n\n    USERS=\"olusecc olusecc olusecc\"\n    echo \"Users to configure: $USERS\"\n\n    # Wait for cloud-init to finish creating users\n    echo \"Waiting for cloud-init to complete...\"\n    while [ ! -f /var/lib/cloud [...]
            "name": "vm-fortools",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.172.7.74",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/networks/vpc-ansible",
                "network_ip": "10.128.0.18",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/regions/us-central1/subnetworks/vpc-ansible",
                "subnetwork_project": "devsecopsupanzi"
              }
            ],
            "project": "devsecopsupanzi",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/zones/us-central1-a/instances/vm-fortools",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "vm-internal"
            ],
            "tags_fingerprint": "Cx2bKzEMszY=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "tls_private_key.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm3",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250805",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 100,
                    "type": "pd-balanced"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/zones/us-central1-a/disks/vm-formie"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devsecopsupanzi/zones/us-central1-a/instances/vm-formie",
            "instance_id": "5471502881749476829",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-custom-4-8192",
            "metadata": {
              "block-project-ssh-keys": "TRUE",
              "enable-oslogin": "FALSE",
              "ssh-keys": "olusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtLYbCUU42 olusec@oadewusi\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBd2OWHwV3jMCVQxtG/4n8nIq1YMpmrr5rW9ygAP1U1P\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtLYbCUU42 olusec@oadewusi\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIBd2OWHwV3jMCVQxtG/4n8nIq1YMpmrr5rW9ygAP1U1P\nolusecc:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII4r9yDAcE6C3LBW40A6ixY6u2RmBHdjH2mtL [...]
            },
            "metadata_fingerprint": "QPHBJ_mSsDk=",
            "metadata_startup_script": "    #!/usr/bin/env bash\n    set -e  # Remove -u to avoid issues with unset variables\n    \n    # Enable logging for debugging\n    exec \u003e \u003e(logger -t startup-script) 2\u003e\u00261\n    echo \"Starting cluster setup script...\"\n\n    USERS=\"olusecc olusecc olusecc\"\n    echo \"Users to configure: $USERS\"\n\n    # Wait for cloud-init to finish creating users\n    echo \"Waiting for cloud-init to complete...\"\n    while [ ! -f /var/lib/cloud [...]
            "name": "vm-formie",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.123.164.154",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/networks/vpc-ansible",
                "network_ip": "10.128.0.19",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/regions/us-central1/subnetworks/vpc-ansible",
                "subnetwork_project": "devsecopsupanzi"
              }
            ],
            "project": "devsecopsupanzi",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/zones/us-central1-a/instances/vm-formie",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "ssh",
              "vm-internal"
            ],
            "tags_fingerprint": "Cx2bKzEMszY=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ],
            [
              {
                "type": "get_attr",
                "value": "metadata_startup_script"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.vpc",
            "tls_private_key.cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/devsecopsupanzi/global/networks/vpc-ansible",
            "mtu": 0,
            "name": "vpc-ansible",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "9212075442699628509",
            "project": "devsecopsupanzi",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devsecopsupanzi/global/networks/vpc-ansible"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}